@@ -163,6 +163,7 @@ Merged from 2.2:
  * (cqlsh) Support timezone conversion using pytz (CASSANDRA-10397)
  * cqlsh: change default encoding to UTF-8 (CASSANDRA-11124)
 Merged from 2.1:
+ * Checking if an unlogged batch is local is inefficient (CASSANDRA-11529)
  * Fix out-of-space error treatment in memtable flushing (CASSANDRA-11448).
  * Don't do defragmentation if reading from repaired sstables (CASSANDRA-10342)
  * Fix streaming_socket_timeout_in_ms not enforced (CASSANDRA-11286)
